# tui-preview

./: .gitignore  .gitmodules  LICENSE  README.md  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml  publish.yml
example/: counter.wasm  gradient.wasm  index.html  main.tsx  minesweeper.wasm
example/counter/: Cargo.toml
example/counter/src/: ansi.rs  main.rs
example/minesweeper/: Cargo.toml
example/minesweeper/src/: action.rs  main.rs  middleware.rs  reducer.rs  state.rs  ui.rs
scripts/: build-examples-wasm.sh  build-libghostty-wasm.sh
src/: TuiPreview.tsx  index.ts  types.ts  wasi.ts
src/core/: ghostty.ts  index.ts  jspi.d.ts  libghostty.ts  normalize.ts  wasi.ts
tests/: normalize.test.mjs  wasi-bridge.test.mjs
wasm/ghostty-vt/: build.zig  wrapper.zig
